# YSIS_Dev

./: .aider.model.metadata.json  .gitignore  .pre-commit-config.yaml  AGENT_READ_THIS_FIRST.md  AI_START_HERE.md  ARCHITECTURE.md  ARCHITECTURE_V2.md  DOC_INDEX.md  GRAND_SYSTEM_ANALYSIS.md  README.md  README_LOCAL_SETUP.md  SELF_AUDIT_REPORT.md  SESSION_REPORT_2025_12_22.md  SYSTEM_STATE.md  debug_ollama_models.py  debug_orchestrator_boot.py  debug_rag.py  dirty_file.txt  docker-compose.yml  error_parser.py  mkdocs.yml  mutmut_config.py  pyproject.toml  requirements.txt  respond_to_debate.py  run_bootstrap_test.py  run_build_dashboard.py  run_build_rag.py  run_final_polish.py  run_fix_memory.py  run_fix_sentinel.py  run_hybrid_test.py  run_meta_optimization.py  run_stress_test_suite.py  run_system_refactor.py  run_tier3_step1.py  run_tier3_step1_educated.py  run_tier3_step1_v3.py  send_agent_analysis.py  send_report.py  (+11 more)
.claude/: settings.json  settings.local.json
.claude/commands/: ybis-full-cycle.md
.claude/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  stop.py
.claude/skills/: ybis-task-executor.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  enforcement.yml  release.yml
.sandbox_hybrid__archived_2025_12_20/T-001/: RESULT.md  STATE_SNAPSHOT.json
.sandbox_hybrid__archived_2025_12_20/TASK-HYBRID-001/: PLAN.md  RUNBOOK.md
.sandbox_worker/CLEANUP-001/: SUMMARY.md
.sandbox_worker/FIX-001/: SUMMARY.md
.sandbox_worker/LANGGRAPH-VICTORY/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/ORGAN-CREWAI/: SUMMARY.md
.sandbox_worker/ORGAN-REDIS/: SUMMARY.md
.sandbox_worker/STRESS-CLAUDE-001/: SUMMARY.md
.sandbox_worker/STRESS-E/: SUMMARY.md
.sandbox_worker/STRESS-F/: SUMMARY.md
.sandbox_worker/T-102/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TASK-New-206/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TASK-New-218/: SUMMARY.md
.sandbox_worker/TASK-New-218-FINAL/: SUMMARY.md
.sandbox_worker/TASK-New-326/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TASK-New-393/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TASK-New-519/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json  verification_script.py
.sandbox_worker/TASK-New-525/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TASK-New-540/: DECISIONS.json  PLAN.md  RUNBOOK.md  STATE_SNAPSHOT.json
.sandbox_worker/TEST-001/: SUMMARY.md
00_GENESIS/: ONBOARDING.md  YBIS_CONSTITUTION.md  install-manifest.yaml
agents/: README.md
config/: .sandbox_aiderignore  aider_model_settings.yml  code_quality_thresholds.json
configs/: adapters.yaml  framework_docs.yaml
docker/: Dockerfile.sandbox  Dockerfile.worker  README.md  docker-compose.yml
docs/: 404_CAUSES_EXPLAINED.md  ADAPTER_INTEGRATION_STATUS.md  ADAPTER_REGISTRY_GUIDE.md  ADAPTER_STATUS.md  ADVANCED_AGENT_PHILOSOPHIES_2026.md  AGENTS.md  AGENTS_ONBOARDING.md  AGENT_READ_THIS_FIRST.md  AI_ASSISTANT_INTEGRATION_ANALYSIS.md  AI_START_HERE.md  ARCH.md  ARCHITECTURE.md  AUTO_RULES.md  AUTO_TEST_GATE_IMPLEMENTATION.md  BOOTSTRAP_FACTORY_FULL.md  BOOTSTRAP_PLAN.md  CLAUDE_CODE_FEATURES.md  CLAUDE_CODE_FEATURES_EXPLAINED.md  CLAUDE_CODE_INTEGRATION_COMPLETE.md  CLAUDE_CODE_INTEGRATION_STATUS.md  CODEBASE_STRUCTURE.md  CODE_STANDARDS.md  COMMERCIAL_TOOLS_INTEGRATION_PLAN.md  COMPREHENSIVE_COVERAGE_ANALYSIS.md  COMPREHENSIVE_PROJECT_STATUS.md  COMPREHENSIVE_SYSTEM_AUDIT_2026.md  COMPREHENSIVE_VENDOR_INTEGRATION_PLAN_2026.md  COMPREHENSIVE_VENDOR_RESEARCH.md  CONSTITUTION.md  CORE_BOUNDARY_REFACTOR_PLAN.md  COVERAGE_IMPROVEMENT_REPORT.md  CURSOR_WORKER_PROMPT.md  DEPENDENCY_SYSTEM.md  DISCIPLINE.md  DOC_INDEX.md  E2E_STRESS_TEST_PLAN.md  E2E_TEST_SANDBOX_VERIFICATION.md  E2E_TEST_UPDATES_SUMMARY.md  E2E_WORKFLOW_STATUS.md  ERROR_KB_INTEGRATION.md  (+128 more)
examples/: RUNBOOK.sh  dependency_example.py
legacy/: README.md
root/: architecture.json
scripts/: README.md  README_AUTO_SCRAPE.md  SCRAPER_COMPARISON.md  SCRAPER_MIGRATION.md  add_task.py  analyze_404_causes.py  analyze_self_improve_quality.py  analyze_system_homogeneity.py  auto_scrape_package_docs.py  bootstrap.ps1  bootstrap.sh  build_doc_graph.py  check_adapter_cves.py  check_adapter_status.py  check_duplicates.py  check_emoji.py  check_execution_status.py  check_graph.py  check_latest_run.py  check_logging_coverage.py  check_observability_setup.py  check_quality.py  check_rag_quality.py  check_scraped_status.py  check_self_development_quality.py  check_staleness.py  check_test_coverage.py  check_workflow_status.py  cleanup_outdated_reports.py  cleanup_structure.sh  cleanup_structure_v2.sh  comprehensive_coverage_analysis.py  create_and_run_simple_task.py  create_comprehensive_task.py  create_error_knowledge_base_task.py  create_improvement_tasks.py  create_observability_tasks.py  create_test_repair_task.py  debug_ref.py  debug_test_execution.py  (+85 more)
src/: final_test.py  hello_graph.py  snake_game.py  stress_b.py  user_auth.py  victory.py
state_management/: state_object.py
tests/: README.md  conftest.py  docker_sandbox_executor.test.ts  dry_run_router.py  dry_run_worker.py  factory_test_suite.ts  pluginTests.py  pluginTests.ts  stress_test_system.py  test_aider_adapter.py  test_async_patterns.py  test_calculator.py  test_control_plane_db.py  test_crewai_bridge.py  test_data_plane.py  test_db_operations.py  test_debate.py  test_gates.py  test_graph_structure.py  test_imports.py  test_lease_mechanism.py  test_mcp_memory_tools.py  test_mcp_server.py  test_mem0_bridge.py  test_orchestrator_graph.py  test_planner_config.py  test_policy_loader.py  test_runcontext_validation.py  test_sandbox_executor.py  test_simple_calc.py  test_skills.py  test_syscalls_exec.py  test_syscalls_fs.py  test_syscalls_git.py  test_tier3_basic.py  test_tier4_e2e.py  test_vector_store.py  test_verifier.py  test_weather_stats.py  test_workflow_state_schema.py
utils/: logging.py
worker/: worker_process.ts
(+3705 files in other folders)
